--- a/src/website/parent.html
+++ b/src/website/parent.html
@@ -133,7 +133,25 @@
       provides the loader library functionality
     -->
     <script src="./lex-web-ui-loader.js"></script>
-
+<!-- Inject mosaic libraries -->
+    <script>
+      window.mosaicConfigure = {
+        componentPath: 'https://cdn.svc.oneadvanced.com/mosaic-components/latest',
+        vendorPath: 'https://cdn.svc.oneadvanced.com/mosaic-components/latest/vendor',
+        themePath: 'https://cdn.svc.oneadvanced.com/mosaic-components/latest',
+        useLayout: true,
+        useScaffold: true,
+        useControls: true,
+        useData: true,
+        useForms: true,
+        useMessaging: true,
+        usePages: true,
+        usePageLoader: true,
+      };
+  </script>
+  <script src="https://cdn.svc.oneadvanced.com/mosaic-components/latest/components-loader.js"
+          async></script>
+<!-- End of mosaic loading -->	
     <!--
       After the loader script tag has been included, you can use its global
       variable to load the chatbot UI in an iframe
